--- a/management-report/markdown/subpage-demographics.Rmd
+++ b/management-report/markdown/subpage-demographics.Rmd
@@ -12,7 +12,6 @@ source(here::here("code", "00_setup-environment.R"))
 library(crosstalk) # for drop down menus
 library(phsstyles)
 library(htmltools)
-library(phsstyles)
 
 # Write numbers with thousands separator
 knit_hooks$set(inline = function(x){
@@ -110,6 +109,7 @@ legend_data <- tibble(
   y = c(0,0))
 
 #prepare simd data
+
 ldp_all_simd <- pds_all %>%
   filter(fy != "2024/25", simd != "Unknown") %>%
   group_by(geog, fy, simd, ldp) %>%
@@ -124,13 +124,13 @@ pds_all_simd <- pds_all %>% group_by(geog, fy, simd) %>% filter(simd != "Unknown
 simd_pop_data <- read_rds("//conf/dementia/A&I/Outputs/management-report/lookups/simd_pop_data.rds")
 #above can be REMOVED when pages are linked (copied from subpage-trends)
 
-pop_data_simd <- simd_pop_data %>% filter(sex == "All", age_grp == "All") %>% select(-sex, -age_grp)
+pop_data_simd <- simd_pop_data %>% filter(sex == "All", age_grp == "All", age_grp_2 == "All") %>% select(-sex, -age_grp, -age_grp_2)
 
 pds_all_simd_cal_year <- pds_all_simd %>% 
   mutate(year = as.numeric(substr(fy, 1, 4)))
 
 pds_all_simd_rates <- left_join(pds_all_simd_cal_year, pop_data_simd) %>% select(-year) %>%
-  mutate(pop_rate_10000 = round((total_referrals/pop)*10000, 2)) %>% select(fy, geog, simd, pop_rate_10000)
+  mutate(pop_rate_10000 = round((total_referrals/pop)*10000, 2)) %>% select(geog, fy, simd, pop_rate_10000)
 
 pds_all_simd_rates$geog <- factor(pds_all_simd_rates$geog, levels = unique(pds_all_simd_rates$geog))
 pds_all_simd_rates$simd <- as.factor(pds_all_simd_rates$simd)
@@ -553,143 +553,10 @@ Please get in touch with any comments, suggestions and feedback: [phs.dementiapd
 Gender {data-navmenu="Demographics"}
 =================================================
 
+
 Deprivation (SIMD) {data-navmenu="Demographics"}
-=================================================
-Sidebar {.sidebar}
------------------------------------------------------------------------
-
-<br>
-
-### Deprivation - Trend
-***
-
-<font size="2"> 
-<span style="color:red"> 
-**MANAGEMENT INFORMATION ONLY:** <br>
-**NOT FOR ONWARD DISTRIBUTION**
-</span> </font>
-
-***
-
-<ul>
-  <li>[Trend](#deprivation-simd)</li>
-  <li>[Proportions](#simd-proportions)</li>
-  <li>[Rates per 10,000 population](#simd-rates)</li>
-  <li>[Outcomes](#simd-outcomes)</li>
-</ul>
-
-***
-
-Please get in touch with any comments, suggestions and feedback: [phs.dementiapds@phs.scot](mailto:phs.dementiapds@phs.scot)
-
-
-Row
-----------------------------------------------------------------------
-
-### **Note**
-
-**Please note that both the Dementia Post Diagnostic Support service provision and data submission to PHS were affected by the COVID-19 pandemic.**
-
-
-Row {.tabset data-height=600}
-----------------------------------------------------------------------
-
-### **Scotland**
-
-```{r trend-plot-simd}
-
-# trends_plot <- plot_trend(pds_scot, total_referrals)
-# trends_plot
-
-```
-
-### **Health Boards**
-<div>
-```{r dropdown-hb-simd, fig.width=2, fig.align='left'}
-# data_filter_hb <- filter_select(id = "trend_filter_hb",
-#                                     label = "Select Health Board:",
-#                                     group = ~geog,
-#                                     sharedData = pds_trends_data_hb
-#                                    )
-# data_filter_hb
-
-```
-</div>
-
-<div class="trend-plot-hb">
-```{r trend-plot-hb-simd, fig.height=5}
-
-# trends_plot_hb <- plot_trend(pds_trends_data_hb, total_referrals)
-# trends_plot_hb
-
-```
-</div>
-
-
-### **Integration Authority Areas**
-
-```{r dropdown-ijb-simd, fig.height=5}
-# data_filter_ijb <- filter_select(id = "trend_filter_ijb",
-#                                     label = "Select Integration Authority Area:",
-#                                     group = ~geog,
-#                                     sharedData = pds_trends_data_ijb
-#                                    )
-# data_filter_ijb
-
-```
-
-<div>
-```{r trend-plot-ijb-simd, fig.height=5}
-
-# trends_plot_ijb <- plot_trend(pds_trends_data_ijb, total_referrals)
-# trends_plot_ijb
-
-```
-</div>
-
-Row {.tabset data-height=750}
-----------------------------------------------------------------------
-
-### **Health Boards**
-
-```{r trend-table-hb-simd}
-
-# pds_all %>% filter(geog == "Scotland" | grepl("NHS", geog)) %>% 
-#             mutate(total_referrals = format(total_referrals, big.mark = ",")) %>% 
-#             pivot_wider(names_from = fy, values_from = total_referrals) %>%
-#             rename(`Health Board` = geog) %>%
-#             kable(align = c("l", rep("r", length(unique(pds$fy))))) %>%
-#             kable_styling(full_width = FALSE) %>%
-#             column_spec(1, bold = TRUE) %>%
-#   # Add header above table 
-#             add_header_above(
-#                     c(" " = 1,
-#                      "Financial Year of Diagnosis" = length(unique(pds$fy))))
-
-```
-
-### **Integration Authority Areas**
-
-```{r trend-table-ijb-simd}
-
-# pds_all %>% filter(geog == "Scotland" | !grepl("NHS", geog)) %>% 
-#             mutate(total_referrals = format(total_referrals, big.mark = ",")) %>% 
-#             pivot_wider(names_from = fy, values_from = total_referrals) %>% 
-#             rename(`Integration Authority Area` = geog) %>%
-#             kable(align = c("l", rep("r", length(unique(pds$fy))))) %>% 
-#             kable_styling(full_width = FALSE) %>%
-#             column_spec(1, bold = TRUE) %>%
-#   # Add header above table 
-#             add_header_above(
-#                        c(" " = 1,
-#                          "Financial Year of Diagnosis" = length(unique(pds$fy)))) %>%
-#             scroll_box(height = "740px")
-#  
-
-```
-
-SIMD Proportions {.hidden}
 =====================================
+
 Sidebar {.sidebar}
 -----------------------------------------------------------------------
 
@@ -708,8 +575,7 @@ Sidebar {.sidebar}
 ***
 
 <ul>
-  <li>[Trend](#deprivation-simd)</li>
-  <li>[Proportions](#simd-proportions)</li>
+  <li>[**Proportions**](#deprivation-simd)</li>
   <li>[Rates per 10,000 population](#simd-rates)</li>
   <li>[Outcomes](#simd-outcomes)</li>
 </ul>
@@ -827,9 +693,8 @@ Sidebar {.sidebar}
 
 ***
 <ul>
-  <li>[Trend](#deprivation-simd)</li>
-  <li>[Proportions](#simd-proportions)</li>
-  <li>[Rates per 10,000 population](#simd-rates)</li>
+  <li>[Proportions](#deprivation-simd)</li>
+  <li>[**Rates per 10,000 population**](#simd-rates)</li>
   <li>[Outcomes](#simd-outcomes)</li>
 </ul>
 
@@ -845,74 +710,227 @@ Row
 **Please note that both the Dementia Post Diagnostic Support service provision and data submission to PHS were affected by the COVID-19 pandemic.**
 
 
-Row {data-height=1000}
+Row {.tabset data-height=965}
 ----------------------------------------------------------------------
 
-###
+### **Trend by Financial Year**
 
-```{r dropdown-pop-simd}
-# data_filter_pop_year <- filter_select(id = "filter_pop_simd_year",
-#                                     label = "Select Financial Year:",
-#                                     group = ~fy,
-#                                     sharedData = pds_simd_pop_data,
-#                                     multiple = FALSE
-#                                    )
-# 
-# 
-# data_filter_pop_hb_ijb <- filter_select(id = "filter_pop_simd_hb_ijb",
-#                                     label = "Select Health Board/Integration Authority Area:",
-#                                     group = ~geog,
-#                                     sharedData = pds_simd_pop_data,
-#                                     multiple = FALSE
-#  
-#                                                                       )
-# bscols(widths = c(1,4,4,NA),
-#        NULL,
-#        data_filter_pop_year,
-#        data_filter_pop_hb_ijb,
-#        NULL)
+```{r dropdown-trend-simd-pop}
+
+pds_pop_simd_data <- SharedData$new(pds_all_simd_rates, key = ~geog, group = "trend_simd_pop")
+
+data_filter_trend_simd_pop <- filter_select(id = "filter_trend_simd_pop",
+                                    label = "Select Health Board or Integration Authority Area:",
+                                    group = ~geog,
+                                    sharedData = pds_pop_simd_data,
+                                    multiple = FALSE
+                                      )
+
+bscols(widths = c(1,5,NA),
+       NULL,
+       data_filter_trend_simd_pop,
+       NULL)
 
 
 ```
 
+<h2 style="margin-left: 50px; margin-top: 0px; margin-bottom: 0px"> Number of people referred to PDS per 10,000 population by SIMD Quintile and Financial Year
+ </h2>
+```{r plot-trend-simd-legend-pop}
 
-```{r plot-pop-simd}
+ bscols(widths = 12,
+ div(id="popsimdlegend",plot_trend_simd_legend(pds_all_simd), style="margin-bottom:-355px"))
 
-# bscols(widths = c(10,2),
-# plot_bar_simd_pop(pds_simd_pop_data),
-# plot_bar_simd_pop_legend(legend_data))
+```
+
+
+```{r plot-trend-simd-pop}
+bscols(widths = 12,
+  div(style = css(width="98%", height="400px"),
+plot_trend_simd(pds_pop_simd_data, measure = pop_rate_10000, y = "Rate per 10,000 Population"))
+)
 
 ```
 
 
-```{r table-pop-simd}
+```{r table-trend-simd-pop}
 
-# pds_prop_table_data <- pds_all_age %>% group_by(geog, fy) %>% 
-#   mutate(perc_referrals = paste0(round((total_referrals/sum(total_referrals))*100,0),"%")) %>% ungroup() %>% 
-#   select(-total_referrals) %>% 
-#   pivot_wider(names_from = fy, values_from = perc_referrals) %>%
-#              rename(`Age Group` = age_grp)
-# pds_prop_table_data[is.na(pds_prop_table_data)] <- "0%"
-# 
-# 
-# pds_prop_table <- SharedData$new(pds_prop_table_data, key = ~geog, group = "trend_prop")
-# 
-# 
-# DT::datatable(pds_prop_table, rownames = FALSE,
-#               options = list(pageLength = 10,
-#                              scrollX = FALSE,
-#                              scrollY = FALSE,
-#                              dom = "t",
-#                              ordering = FALSE,
-#                              columnDefs = list(list(visible = FALSE, targets = 0),
-#                                                list(className = 'dt-right', targets = 2:10),
-#                                                list(width = '10px', targets = 1:10)
-#                                                )))
-# 
+trend_pop_simd_table_data <- pds_all_simd_rates %>%
+  select(geog,fy,simd,pop_rate_10000) %>%
+  pivot_wider(names_from = fy, values_from = pop_rate_10000) %>%
+             rename(`SIMD Quintile` = simd)
+
+
+trend_simd_table_pop <- SharedData$new(trend_pop_simd_table_data, key = ~geog, group = "trend_simd_pop")
+
+
+bscols(widths = 12,
+       div(style = css(width="97%", height="235px", margin="20px"),
+DT::datatable(trend_simd_table_pop, rownames = FALSE,
+              options = list(pageLength = 10,
+                             scrollX = TRUE,
+                             scrollY = FALSE,
+                             dom = "t",
+                             ordering = FALSE,
+                             columnDefs = list(list(visible = FALSE, targets = 0),
+                                               list(className = 'dt-right', targets = 2:9)
+                                               ))) %>%
+           DT::formatStyle(2, fontWeight = "bold"#, padding = "4px"
+                          )
+        )
+     )
+
 
 
 ```
 
+### **Health Boards**
+
+```{r dropdown-hb-simd-pop}
+pds_hb_simd_rates <- pds_all_simd_rates %>% filter(geog == "Scotland" | grepl("NHS", geog)) %>% 
+  complete(nesting(geog, fy), simd, fill = list(pop_rate_10000 = 0))
+
+pds_pop_simd_data_hb <- SharedData$new(pds_hb_simd_rates, key = ~fy, group = "hb_simd_pop")
+
+data_filter_hb_simd_pop <- filter_select(id = "filter_hb_simd_pop",
+                                    label = "Select Financial Year:",
+                                    group = ~fy,
+                                    sharedData = pds_pop_simd_data_hb,
+                                    multiple = FALSE
+                                      )
+
+bscols(widths = c(1,5,NA),
+       NULL,
+       data_filter_hb_simd_pop,
+       NULL)
+
+
+```
+
+<h2 style="margin-left: 50px; margin-top: 0px; margin-bottom: 0px"> Number of people referred to PDS per 10,000 population by SIMD Quintile and Health Board</h2>
+```{r plot-hb-simd-legend-pop}
+
+ bscols(widths = 12,
+ div(id="popsimdlegendhb",plot_geog_simd_legend(pds_all_simd), style="margin-bottom:-355px"))
+
+```
+
+
+```{r plot-hb-simd-pop}
+bscols(widths = 12,
+  div(style = css(width="98%", height="385px", marginBottom="-30px"),
+plot_geog_simd(pds_pop_simd_data_hb, measure = pop_rate_10000, 
+               x = "Health Board", y = "Rate per 10,000 Population"))
+)
+
+```
+
+
+```{r table-hb-simd-pop}
+
+hb_pop_simd_table_data <- pds_all_simd_rates %>% filter(geog == "Scotland" | grepl("NHS", geog)) %>% 
+  select(geog,fy,simd,pop_rate_10000) %>% mutate(pop_rate_10000 = as.character(pop_rate_10000)) %>% 
+  pivot_wider(names_from = geog, values_from = pop_rate_10000, values_fill = "-") %>%
+             rename(`SIMD Quintile` = simd)
+
+
+hb_simd_table_pop <- SharedData$new(hb_pop_simd_table_data, key = ~fy, group = "hb_simd_pop")
+
+
+bscols(widths = 12,
+       div(style = css(width="97%", height="360px", margin="20px"),
+DT::datatable(hb_simd_table_pop, rownames = FALSE, extensions = "FixedColumns",
+              options = list(pageLength = 5,
+                             scrollX = TRUE,
+                             fixedColumns = list(leftColumns = 1),
+                             scrollY = FALSE,
+                             dom = "t",
+                             ordering = FALSE,
+                             columnDefs = list(list(visible = FALSE, targets = 0),
+                                               list(className = 'dt-right', targets = 2:16)
+                                               ))) %>%
+           DT::formatStyle(2, fontWeight = "bold"#, padding = "4px"
+                          )
+        )
+     )
+
+
+
+```
+
+### **Integration Authority Areas**
+
+```{r dropdown-ijb-simd-pop}
+pds_ijb_simd_rates <- pds_all_simd_rates %>% filter(!grepl("NHS", geog)) %>% 
+  complete(nesting(geog, fy), simd, fill = list(pop_rate_10000 = 0))
+
+pds_pop_simd_data_ijb <- SharedData$new(pds_ijb_simd_rates, key = ~fy, group = "ijb_simd_pop")
+
+data_filter_ijb_simd_pop <- filter_select(id = "filter_ijb_simd_pop",
+                                    label = "Select Financial Year:",
+                                    group = ~fy,
+                                    sharedData = pds_pop_simd_data_ijb,
+                                    multiple = FALSE
+                                      )
+
+bscols(widths = c(1,5,NA),
+       NULL,
+       data_filter_ijb_simd_pop,
+       NULL)
+
+
+```
+
+<h2 style="margin-left: 50px; margin-top: 0px; margin-bottom: 0px"> Number of people referred to PDS per 10,000 population by SIMD Quintile and Integration Authority Area</h2>
+```{r plot-ijb-simd-legend-pop}
+
+ bscols(widths = 12,
+ div(id="popsimdlegendijb",plot_geog_simd_legend(pds_pop_simd_data_ijb), style="margin-bottom:-355px"))
+
+```
+
+
+```{r plot-ijb-simd-pop}
+bscols(widths = 12,
+  div(style = css(width="98%", height="385px", marginBottom="-30px"),
+plot_geog_simd(pds_pop_simd_data_ijb, measure = pop_rate_10000, 
+               x = "Integration Authority Area", y = "Rate per 10,000 Population"))
+)
+
+```
+
+
+```{r table-ijb-simd-pop}
+
+ijb_pop_simd_table_data <- pds_all_simd_rates %>% filter(!grepl("NHS", geog)) %>% 
+  mutate(pop_rate_10000 = as.character(pop_rate_10000)) %>% 
+  pivot_wider(names_from = geog, values_from = pop_rate_10000, values_fill = "-") %>%
+             rename(`SIMD Quintile` = simd)
+
+
+ijb_simd_table_pop <- SharedData$new(ijb_pop_simd_table_data, key = ~fy, group = "ijb_simd_pop")
+
+
+bscols(widths = 12,
+       div(style = css(width="97%", height="340px", margin="20px"),
+DT::datatable(ijb_simd_table_pop, rownames = FALSE, extensions = "FixedColumns",
+              options = list(pageLength = 5,
+                             scrollX = TRUE,
+                             fixedColumns = list(leftColumns = 1),
+                             scrollY = FALSE,
+                             dom = "t",
+                             ordering = FALSE,
+                             columnDefs = list(list(visible = FALSE, targets = 0),
+                                               list(className = 'dt-right', targets = 2:33)
+                                               ))) %>%
+           DT::formatStyle(2, fontWeight = "bold"#, padding = "4px"
+                          )
+        )
+     )
+
+
+
+```
 
 SIMD Outcomes {.hidden}
 =====================================
@@ -934,10 +952,9 @@ Sidebar {.sidebar}
 ***
 
 <ul>
-  <li>[Trend](#deprivation-simd)</li>
-  <li>[Proportions](#simd-proportions)</li>
+  <li>[Proportions](#deprivation-simd)</li>
   <li>[Rates per 10,000 population](#simd-rates)</li>
-  <li>[Outcomes](#simd-outcomes)</li>
+  <li>[**Outcomes**](#simd-outcomes)</li>
 </ul>
 
 ***
@@ -961,7 +978,7 @@ Row {data-height=835}
 ldp_all_simd_data <- SharedData$new(ldp_all_simd, key = ~geog, group = "ldp_simd")
 
 data_filter_ldp_simd <- filter_select(id = "filter_ldp_simd",
-                                    label = "Select Health Board/Integration Authority Area:",
+                                    label = "Select Health Board or Integration Authority Area:",
                                     group = ~geog,
                                     sharedData = ldp_all_simd_data,
                                     multiple = FALSE
@@ -1044,6 +1061,24 @@ function filter_default() {
   [0].selectize.setValue("NHS Ayrshire & Arran", false);
 
   document.getElementById("filter_pop_age_hb_ijb").getElementsByClassName("selectized")
+  [0].selectize.removeOption("");
+  
+      document.getElementById("filter_trend_simd_pop").getElementsByClassName("selectized") 
+  [0].selectize.setValue("Scotland", false);
+
+  document.getElementById("filter_trend_simd_pop").getElementsByClassName("selectized")
+  [0].selectize.removeOption("");
+  
+   document.getElementById("filter_hb_simd_pop").getElementsByClassName("selectized") 
+  [0].selectize.setValue("2023/24", false);
+
+  document.getElementById("filter_hb_simd_pop").getElementsByClassName("selectized")
+  [0].selectize.removeOption("");
+  
+    document.getElementById("filter_ijb_simd_pop").getElementsByClassName("selectized") 
+  [0].selectize.setValue("2023/24", false);
+
+  document.getElementById("filter_ijb_simd_pop").getElementsByClassName("selectized")
   [0].selectize.removeOption("");
   
     document.getElementById("filter_ldp_simd").getElementsByClassName("selectized") 
